--- a/BullsEye/BullsEye/EvilBullsEyeViewController.xib
+++ b/BullsEye/BullsEye/EvilBullsEyeViewController.xib
@@ -94,7 +94,7 @@
 					<object class="IBUIButton" id="871736929">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{7, 7}, {18, 19}}</string>
+						<string key="NSFrame">{{5, 5}, {31, 31}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="761150197"/>
@@ -103,24 +103,26 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<int key="IBUIButtonType">3</int>
-						<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
 						<reference key="IBUIHighlightedTitleColor" ref="337956147"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
 						</object>
 						<object class="NSColor" key="IBUINormalTitleShadowColor" id="196124141">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="24043979">
-							<int key="type">2</int>
-							<double key="pointSize">15</double>
+						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">setting.png</string>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="628287139">
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">2</int>
+							<int key="size">2</int>
+						</object>
+						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">15</double>
+							<double key="NSSize">18</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -239,7 +241,7 @@
 					<object class="IBUILabel" id="901966192">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{156, 218}, {120, 21}}</string>
+						<string key="NSFrame">{{154, 218}, {120, 21}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="853437233"/>
@@ -534,8 +536,15 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">StartOverButton.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="24043979"/>
-						<reference key="IBUIFont" ref="628287139"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="24043979">
+							<int key="type">2</int>
+							<double key="pointSize">15</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="293416679">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">15</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 					<object class="IBUIButton" id="19719658">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -558,7 +567,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="196124141"/>
 						<reference key="IBUIFontDescription" ref="24043979"/>
-						<reference key="IBUIFont" ref="628287139"/>
+						<reference key="IBUIFont" ref="293416679"/>
 					</object>
 					<object class="IBUILabel" id="760477545">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -866,7 +875,6 @@
 							<reference ref="348112072"/>
 							<reference ref="163308504"/>
 							<reference ref="761150197"/>
-							<reference ref="871736929"/>
 							<reference ref="146152634"/>
 							<reference ref="1066976722"/>
 							<reference ref="771040354"/>
@@ -874,6 +882,7 @@
 							<reference ref="596907171"/>
 							<reference ref="1070619350"/>
 							<reference ref="901966192"/>
+							<reference ref="871736929"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1023,6 +1032,7 @@
 				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="0.0" key="67.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="69.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<real value="0.0" key="69.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="71.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -1030,7 +1040,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">71</int>
+			<int key="maxID">72</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1136,6 +1146,7 @@
 			<string key="Button-Normal.png">{100, 37}</string>
 			<string key="StartOverButton.png">{32, 32}</string>
 			<string key="StartOverIcon.png">{19, 20}</string>
+			<string key="setting.png">{25, 25}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
